intermediate/k8/deploy-canary-release/manifests/httproute-weight.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-demo-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  hostnames:
    - "canary-demo.example.com"
  rules:
    - backendRefs:
        - name: canary-demo-stable-service
          port: 80
          weight: 90
        - name: canary-demo-canary-service
          port: 80
          weight: 10
